--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,3 +1,4 @@
+
 <head th:fragment="head">
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -16,7 +17,11 @@
 
 <div th:fragment="logo" class="logo-container mb-3 p-3 d-flex justify-content-between">
     <span class="logo">mudi</span>
-    <span class="mt-3">login</span>
+    <span class="mt-3">
+        <a class="text-light" sec:authorize="!isAuthenticated()" href="/login">login</a>
+        <a onclick="document.querySelector('#form-login').submit()" class="text-light" sec:authorize="isAuthenticated()" href="#">logout</a>
+        <form id="form-login" th:action="@{/logout}" method="post"></form>
+    </span>
 </div>
 
 <div th:fragment="titulo(valor)" class="jumbotron mb-0">
