--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -2,6 +2,7 @@
 <head th:fragment="head">
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Handlee&display=swap" rel="stylesheet">
     <style>
         .logo-container {
             background-color: #47bcff;
@@ -15,15 +16,27 @@
     </style>
 </head>
 
-<div th:fragment="logo" class="logo-container mb-3 p-3 d-flex justify-content-between">
-    <span class="logo">mudi</span>
-    <span class="mt-3">
-        <a class="text-light" sec:authorize="!isAuthenticated()" href="/login">login</a>
-        <a onclick="document.querySelector('#form-login').submit()" class="text-light" sec:authorize="isAuthenticated()" href="#">logout</a>
-        <form id="form-login" th:action="@{/logout}" method="post"></form>
-    </span>
+<div th:fragment="logo" class="">
+    <div class="row logo-container p-3 d-flex justify-content-between ">
+        <span class="logo ml-2">mudi</span>
+        <span class="mt-3 mr-4">
+            <a class="text-light" sec:authorize="!isAuthenticated()" href="/login">login</a>
+            <a onclick="document.querySelector('#form-login').submit()" class="text-light" sec:authorize="isAuthenticated()" href="#">logout</a>
+            <form id="form-login" th:action="@{/logout}" method="post"></form>
+        </span>
+    </div>
+    <div class="row " sec:authorize="isAuthenticated()">
+        <div class="col">
+            <nav class="nav">
+                <a class="nav-link" th:href="@{/home}">Home</a>
+                <a class="nav-link" th:href="@{/usuario/pedido}">Meus Pedidos</a>
+
+            </nav>
+        </div>
+
+    </div>
 </div>
 
-<div th:fragment="titulo(valor)" class="jumbotron mb-0">
+<div th:fragment="titulo(valor)" class="jumbotron mb-2 mt-3">
     <h1 class="display-4" th:text="${valor}"></h1>
 </div>
