--- a/src/main/resources/templates/oferta/home.html
+++ b/src/main/resources/templates/oferta/home.html
@@ -41,43 +41,18 @@
                 var app = new Vue({
                     el: '#ofertas',
                     data: {
-                        pedidos: [
-                                    {
-                                        "id": 3,
-                                        "nomeProduto": "Smart TV 32\" LED, Samsung, LH32BENELGA/ZD, HD, HDMI, USB, Wi-Fi",
-                                        "valorNegociado": null,
-                                        "dataDaEntrega": "2020-11-05",
-                                        "urlProduto": "https://www.amazon.com.br/Smart-Samsung-LH32BENELGA-ZD-Wi-Fi/dp/B07P96V6XN/ref=pd_sbs_7?pd_rd_w=AnXeY&pf_rd_p=8e0365a0-40c9-4854-90b9-039b9c2848c4&pf_rd_r=AN550E18Y9CN9GEASA2Y&pd_rd_r=62c45fe9-a21e-4415-bfaf-0c184b30b94a&pd_rd_wg=M8WBE&pd_rd_i=B07P96V6XN",
-                                        "urlImagem": "https://images-na.ssl-images-amazon.com/images/I/61027vOQLJL._AC_SL1000_.jpg",
-                                        "descricao": "TV, Cabo de Energia, Manual do Usuario, Controle Remoto e Bateria para controle remoto",
-                                        "status": "AGUARDANDO",
-                                        "user": {
-                                            "username": "wagner",
-                                            "password": "$2a$10$hGCKWBCpO2vV8wmLPFYA.eB1AGVzn50P7lLD/4MXIK1KVSYuVHTNW",
-                                            "enable": null
-                                        }
-                                    },
-                                    {
-                                        "id": 1,
-                                        "nomeProduto": "Echo Dot (3ª Geração): Smart Speaker com Alexa - Cor Preta",
-                                        "valorNegociado": null,
-                                        "dataDaEntrega": "2020-11-05",
-                                        "urlProduto": "https://www.amazon.com.br/Echo-Dot-3%C2%AA-Gera%C3%A7%C3%A3o-Cor-Preta/dp/B07PDHSJ1H/ref=sr_1_1?__mk_pt_BR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=CVC0DM53ALL1&dchild=1&keywords=alexa&sprefix=alexa%2Caps%2C414&sr=8-1",
-                                        "urlImagem": "https://images-na.ssl-images-amazon.com/images/I/61PA%2BbxUlPL._AC_SL1000_.jpg",
-                                        "descricao": "O Echo Dot é o nosso smart speaker de maior sucesso. Controlado por voz com a Alexa, ele é perfeito para qualquer ambiente. Você pode pedir músicas, notícias, informações e muito mais.",
-                                        "status": "AGUARDANDO",
-                                        "user": {
-                                            "username": "wagner",
-                                            "password": "$2a$10$hGCKWBCpO2vV8wmLPFYA.eB1AGVzn50P7lLD/4MXIK1KVSYuVHTNW",
-                                            "enable": null
-                                        }
-                                    }
-                                ]
+                        pedidos: []
+                    },
+                    mounted () {
+                        axios
+                            .get('http://localhost:8080/api/pedidos/aguardando')
+                            .then(response => (this.pedidos = response.data))
                     }
                 });
             }
 
         </script>
         <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     </body>
 </html>
